Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-55739

Changes to magma dynamic block sizes are not permanent

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • No

    Description

      Bring up couchbase and create a bucket.

      Change the block size

      curl -u $UserName:$PassWord $Host:$AdminPort/pools/default/buckets/$bucket -X POST -d magmaSeqTreeDataBlockSize=$BlockSize

      I can see in the memcache log the magma messages indicating the block size change.

      2023-02-27T12:10:43.400511-08:00 INFO [(fakeData) magma_0]Magma::SeqTreeDataBlockSize kvid:1020 Default:4096 Old:4096 New:65536

      I load data and use magma_dump to prove the block size changes are working.

      couchbase-server --stop

      couchbase-server --start

      I see in the memcache log that the magma config passed in has the block size back to the default value, not the changed value.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mohsin.ahmed Mohsin Ahmed
              scott.lashley Scott Lashley
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty