MB-55739: Add magma block sizes initialization

Add tests to verify dynamic changes to magma block sizes.

Change-Id: I31e0f64479b70d7437224561b852203144cd46b2
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/187506
Well-Formed: Restriction Checker
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Dave Rigby <daver@couchbase.com>